CORE-2644 - Fixed wrapping outcomes in the main container being displayed with no vertical spacing

--- a/css/outcome.less
+++ b/css/outcome.less
@@ -18,6 +18,7 @@
         margin-right: 0;
     }
 
+    .main > .outcome,
     .mw-container > .outcome,
     .mw-footer > .outcome {
         margin-bottom: @v-3;
